# android_rostango

./: .gitignore
android_rostango/: .gitignore  CMakeLists.txt  build.gradle  local.properties  package.xml  settings.gradle
android_rostango/gradle/wrapper/: gradle-wrapper.properties
android_rostango/tango_area_learning/: build.gradle
android_rostango/tango_area_learning/libs/: TangoUtils-release.aar
android_rostango/tango_area_learning/src/main/: AndroidManifest.xml
android_rostango/tango_area_learning/src/main/java/com/github/rombolab/android_rostango/tangoarealearning/: ADFDataSource.java  ADFUUIDListViewActivity.java  ALNode.java  ALRenderer.java  ALStartActivity.java  AreaLearningActivity.java  AreaLearningRajawaliRenderer.java  SaveAdfDialog.java  SaveAdfTask.java  SetADFNameDialog.java  TangoPosePublisher.java  package-info.java
android_rostango/tango_area_learning/src/main/res/layout/: activity_area_learning.xml  main.xml  start_activity.xml  uuid_listview.xml
android_rostango/tango_area_learning/src/main/res/menu/: menu_area_learning.xml
android_rostango/tango_area_learning/src/main/res/values/: strings.xml
scripts/: adf_calibration.py  tango_adf_only.py  tango_listener.py  tango_listener_startFrame_vicon.py  tango_pose  tango_vicon_pose  terminals
scripts/2015-08-04_14-39/: tango_pose_adf
scripts/2015-08-04_14-42/: vicon_pose_adf
scripts/2015-08-04_14-43/: vicon_pose_adf
scripts/2015-08-04_15-07/: vicon_adf_calibration
scripts/2015-08-04_15-10/: vicon_adf_calibration
tango_msgs/: CMakeLists.txt  package.xml
(+3017 files in other folders)
