<?xml version="1.0"?>
<package>
  <name>android_rostango</name>
  <version>0.1.0</version>
  <description>The android_rostango package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="raiv@u.washington.edu">vijeth</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/android_rostango</url> -->



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>android_core</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tango_msgs</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>